ci compilation error fix
Error:  /home/runner/work/3a1fb4202f203a43474838e83f2e414bdd535ead13f8b2d416611d0c4de0a7d1/3a1fb4202f203a43474838e83f2e414bdd535ead13f8b2d416611d0c4de0a7d1/src/main/java/com/acme/workorderapi/service/WorkOrderServiceImpl.java:[48,33] cannot find symbol
Error:    symbol:   method toList()
Error:    location: interface java.util.stream.Stream<java.lang.Long>